--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -234,6 +234,10 @@
         };
         firebase.initializeApp(firebaseConfig);
 
+        const gameContainer = document.getElementById('memory-game');
+        const moveCounterElement = document.getElementById('move-counter');
+        const overlay = document.getElementById('overlay');
+        const completionModal = document.getElementById('completion-modal');
         let moves = 0;
         let firstCard = null;
         let secondCard = null;
@@ -264,43 +268,50 @@
 
                     totalPairs = words.length;
                     callback(cardsArray);
+                })
+                .catch(error => {
+                    console.error("Erro ao carregar os dados dos cartões:", error);
                 });
         }
 
-        function getProgressInfoFromURL() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const level = window.location.pathname.split('/')[2];
-            const unit = window.location.pathname.split('/')[3];
-            const fase = urlParams.get('fase');
-            return { level, unit, fase };
-        }
-
-        function updateFirebaseProgress(level, unit, fase) {
-            const user = firebase.auth().currentUser;
-            if (!user) return;
-
-            const userId = user.uid;
-            const dbRef = firebase.database().ref(`/usuarios/${userId}/progresso/${level}/${unit}`);
-
-            // Definir lógica de fases
-            if (fase === 'last') {
-                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                dbRef.child(`${nextUnit}/fase1`).set(true);
-            } else if (fase === 'end') {
-                const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                firebase.database().ref(`/usuarios/${userId}/progresso/${nextLevel}/Unit1/fase1`).set(true);
-            } else {
-                const currentFase = `fase${fase}`;
-                const nextFase = `fase${parseInt(fase) + 1}`;
-                dbRef.child(currentFase).set(true);
-                dbRef.child(nextFase).set(true);
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
             }
+            return array;
         }
 
-        function markPhaseCompleted() {
-            const { level, unit, fase } = getProgressInfoFromURL();
-            updateFirebaseProgress(level, unit, fase);
-            console.log("Fase concluída!");
+        function createCard(cardData) {
+            const card = document.createElement('div');
+            card.classList.add('card');
+            card.dataset.pair = cardData.pair;
+
+            const cardInner = document.createElement('div');
+            cardInner.classList.add('card-inner');
+
+            const cardFront = document.createElement('div');
+            cardFront.classList.add('card-front');
+            const cardBack = document.createElement('div');
+            cardBack.classList.add('card-back');
+
+            if (cardData.type === 'image') {
+                const img = document.createElement('img');
+                img.src = cardData.src;
+                cardBack.appendChild(img);
+            } else if (cardData.type === 'word') {
+                const word = document.createElement('div');
+                word.classList.add('word');
+                word.textContent = cardData.text;
+                cardBack.appendChild(word);
+            }
+
+            cardInner.appendChild(cardFront);
+            cardInner.appendChild(cardBack);
+            card.appendChild(cardInner);
+
+            card.addEventListener('click', flipCard);
+            return card;
         }
 
         function flipCard() {
@@ -391,6 +402,12 @@
             });
         }
 
+        function markPhaseCompleted() {
+            const { level, unit, fase } = getProgressInfoFromURL();
+            updateFirebaseProgress(level, unit, fase);
+            console.log("Fase concluída!");
+        }
+
         function showCompletionModal() {
             overlay.style.display = 'block';
             completionModal.style.display = 'block';
@@ -401,12 +418,40 @@
             completionModal.style.display = 'none';
         }
 
+        function getProgressInfoFromURL() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const level = window.location.pathname.split('/')[2];
+            const unit = window.location.pathname.split('/')[3];
+            const fase = urlParams.get('fase');
+            return { level, unit, fase };
+        }
+
+        function updateFirebaseProgress(level, unit, fase) {
+            const user = firebase.auth().currentUser;
+            if (!user) return;
+
+            const userId = user.uid;
+            const dbRef = firebase.database().ref(`/usuarios/${userId}/progresso/${level}/${unit}`);
+
+            if (fase === 'last') {
+                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                dbRef.child(`${nextUnit}/fase1`).set(true);
+            } else if (fase === 'end') {
+                const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                firebase.database().ref(`/usuarios/${userId}/progresso/${nextLevel}/Unit1/fase1`).set(true);
+            } else {
+                const currentFase = `fase${fase}`;
+                const nextFase = `fase${parseInt(fase) + 1}`;
+                dbRef.child(currentFase).set(true);
+                dbRef.child(nextFase).set(true);
+            }
+        }
+
         // Autenticação e carregamento do jogo
         firebase.auth().onAuthStateChanged(user => {
             if (user) {
                 loadCardsData(initGame);
             } else {
-                // Redirecionar para a página de login se não autenticado
                 window.location.href = "/login";
             }
         });
