--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -292,6 +292,10 @@
 
             const cardFront = document.createElement('div');
             cardFront.classList.add('card-front');
+            const logo = document.createElement('img');
+            logo.src = '../../../imagens/logo.png';
+            cardFront.appendChild(logo);
+
             const cardBack = document.createElement('div');
             cardBack.classList.add('card-back');
 
@@ -372,6 +376,7 @@
         }
 
         function initGame(cardsArray) {
+            gameContainer.innerHTML = ''; // Limpar o container antes de adicionar novos cartões
             shuffle(cardsArray).forEach(cardData => {
                 const cardElement = createCard(cardData);
                 gameContainer.appendChild(cardElement);
@@ -383,7 +388,6 @@
         }
 
         function restartGame() {
-            gameContainer.innerHTML = '';
             loadCardsData(initGame);
         }
 
