--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -13,7 +13,7 @@
             justify-content: flex-start;
             height: 100vh;
             margin: 0;
-            background: url('../../../imagens/fundo.png') repeat;
+            background: url('fundo.png') repeat;
             color: #333;
         }
 
@@ -293,7 +293,7 @@
             const cardFront = document.createElement('div');
             cardFront.classList.add('card-front');
             const logo = document.createElement('img');
-            logo.src = '../../../imagens/logo.png';
+            logo.src = 'logo.png'; // Logo na mesma pasta do HTML
             cardFront.appendChild(logo);
 
             const cardBack = document.createElement('div');
@@ -437,17 +437,17 @@
             const userId = user.uid;
             const dbRef = firebase.database().ref(`/usuarios/${userId}/progresso/${level}/${unit}`);
 
-            if (fase === 'last') {
+            if (!isNaN(fase)) {
+                const currentFase = `fase${fase}`;
+                const nextFase = `fase${parseInt(fase) + 1}`;
+                dbRef.child(currentFase).set(true);
+                dbRef.child(nextFase).set(true); // Cria e libera a fase seguinte
+            } else if (fase === 'last') {
                 const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
                 dbRef.child(`${nextUnit}/fase1`).set(true);
             } else if (fase === 'end') {
                 const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
                 firebase.database().ref(`/usuarios/${userId}/progresso/${nextLevel}/Unit1/fase1`).set(true);
-            } else {
-                const currentFase = `fase${fase}`;
-                const nextFase = `fase${parseInt(fase) + 1}`;
-                dbRef.child(currentFase).set(true);
-                dbRef.child(nextFase).set(true);
             }
         }
 
