--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -440,8 +440,9 @@
             if (!isNaN(fase)) {
                 const currentFase = `fase${fase}`;
                 const nextFase = `fase${parseInt(fase) + 1}`;
-                dbRef.child(currentFase).set(true);
-                dbRef.child(nextFase).set(true); // Cria e libera a fase seguinte
+                dbRef.child(currentFase).set(true).then(() => {
+                    dbRef.child(nextFase).set(true); // Cria e libera a fase seguinte
+                });
             } else if (fase === 'last') {
                 const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
                 dbRef.child(`${nextUnit}/fase1`).set(true);
