--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -64,8 +64,8 @@
         .card {
             position: relative;
             width: 100%;
-            padding-top: 100%; /* Aspect ratio 1:1 */
-            perspective: 1000px; /* Perspective for 3D effect */
+            padding-top: 100%;
+            perspective: 1000px;
         }
 
         .card-inner {
@@ -130,7 +130,7 @@
             word-wrap: break-word;
             white-space: normal;
             text-align: center;
-            font-size: calc(10px + 2.5vmin); /* Initial font size */
+            font-size: calc(10px + 2.5vmin);
         }
 
         #restart-button {
@@ -203,9 +203,7 @@
     <button id="back-button" onclick="goBack()">Back</button>
     <h1>Hannah Memory Game</h1>
     <div id="move-counter">Moves: 0</div>
-    <div id="memory-game">
-        <!-- Cards will be dynamically generated here -->
-    </div>
+    <div id="memory-game"></div>
     <button id="restart-button" onclick="restartGame()">Restart Game</button>
 
     <!-- Modal de conclusão --> 
@@ -293,7 +291,7 @@
             const cardFront = document.createElement('div');
             cardFront.classList.add('card-front');
             const logo = document.createElement('img');
-            logo.src = 'logo.png'; // Logo na mesma pasta do HTML
+            logo.src = 'logo.png';
             cardFront.appendChild(logo);
 
             const cardBack = document.createElement('div');
@@ -433,11 +431,14 @@
 
         function updateFirebaseProgress(level, unit, fase) {
             const user = firebase.auth().currentUser;
-            if (!user) return;
+            if (!user) {
+                console.error("Usuário não autenticado!");
+                return;
+            }
 
             const userId = user.uid;
             const dbRef = firebase.database().ref(`/usuarios/${userId}/progresso/${level}/${unit}`);
-
+            
             if (!isNaN(fase)) {
                 const currentFase = `fase${fase}`;
                 const nextFase = `fase${parseInt(fase) + 1}`;
@@ -478,6 +479,7 @@
             if (user) {
                 loadCardsData(initGame);
             } else {
+                console.error("Redirecionando para login, usuário não autenticado!");
                 window.location.href = "/login";
             }
         });
