--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -80,7 +80,7 @@
             cursor: pointer;
         }
 
-        .card.flipped .card-inner {
+        .flipped .card-inner {
             transform: rotateY(180deg);
         }
 
@@ -103,17 +103,11 @@
         .card-front {
             background-color: #3498db;
             color: white;
-        }
-
-        .card-front img {
-            max-width: 80%;
-            max-height: 80%;
-            object-fit: contain;
+            transform: rotateY(180deg); /* Inicialmente virada para baixo */
         }
 
         .card-back {
             background-color: #2ecc71;
-            transform: rotateY(180deg);
         }
 
         .card img {
@@ -278,19 +272,24 @@
 
             const cardFront = document.createElement('div');
             cardFront.classList.add('card-front');
+            cardFront.textContent = ""; // Inicialmente vazio
+
+            const cardBack = document.createElement('div');
+            cardBack.classList.add('card-back');
 
             if (cardData.type === 'image') {
                 const img = document.createElement('img');
                 img.src = cardData.src;
-                cardFront.appendChild(img);
+                cardBack.appendChild(img);
             } else if (cardData.type === 'word') {
                 const word = document.createElement('div');
                 word.classList.add('word');
                 word.textContent = cardData.text;
-                cardFront.appendChild(word);
+                cardBack.appendChild(word);
             }
 
             cardInner.appendChild(cardFront);
+            cardInner.appendChild(cardBack);
             card.appendChild(cardInner);
             card.addEventListener('click', flipCard);
 
