--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Memory Game</title>
     <style>
-        /* Estilos para o jogo de memória */
+        /* Estilos originais do jogo */
         body {
             font-family: "Times New Roman", Times, serif;
             display: flex;
@@ -80,7 +80,7 @@
             cursor: pointer;
         }
 
-        .flipped .card-inner {
+        .card.flipped .card-inner {
             transform: rotateY(180deg);
         }
 
@@ -93,7 +93,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            text-transform: uppercase;
             text-align: center;
             box-sizing: border-box;
             padding: 10px;
@@ -103,29 +102,11 @@
         .card-front {
             background-color: #3498db;
             color: white;
-            transform: rotateY(180deg); /* Inicialmente virada para baixo */
         }
 
         .card-back {
             background-color: #2ecc71;
-        }
-
-        .card img {
-            max-width: 80%;
-            max-height: 80%;
-            object-fit: contain;
-        }
-
-        .card .word {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            word-wrap: break-word;
-            white-space: normal;
-            text-align: center;
-            font-size: calc(10px + 2.5vmin);
+            transform: rotateY(180deg);
         }
 
         #restart-button {
@@ -201,7 +182,7 @@
     <div id="memory-game"></div>
     <button id="restart-button" onclick="restartGame()">Restart Game</button>
 
-    <!-- Modal de conclusão --> 
+    <!-- Modal de conclusão -->
     <div id="overlay"></div>
     <div id="completion-modal">
         <h2>Phase Completed!</h2>
@@ -209,57 +190,59 @@
         <button onclick="closeModal()">Close</button>
     </div>
 
-    <!-- Firebase Config -->
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
             projectId: "hannahenglishcourse",
             storageBucket: "hannahenglishcourse.appspot.com",
             messagingSenderId: "449818788486",
-            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            measurementId: "G-07VVJG9LRS",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707"
         };
         firebase.initializeApp(firebaseConfig);
 
         const gameContainer = document.getElementById('memory-game');
+        const moveCounterElement = document.getElementById('move-counter');
+        const overlay = document.getElementById('overlay');
+        const completionModal = document.getElementById('completion-modal');
         let moves = 0;
-        let matchedPairs = 0;
-        let totalPairs = 0;
         let firstCard = null;
         let secondCard = null;
+        let lockBoard = false;
+        let matchedPairs = 0;
+        let totalPairs = 0;
 
         function loadCardsData(callback) {
             fetch('../data2/words.txt')
                 .then(response => response.text())
                 .then(text => {
                     const words = text.trim().split('\n');
-                    const cardsArray = words.flatMap((word, index) => [
-                        { type: 'image', src: `../data2/imagens/imagem${index + 1}.jpeg`, pair: index },
-                        { type: 'word', text: word.trim(), pair: index }
-                    ]);
+                    const cardsArray = [];
+
+                    words.forEach((word, index) => {
+                        const imageName = `image${index + 1}`;
+                        cardsArray.push({ type: 'image', src: `../data2/imagens/imagem${index + 1}.jpeg`, pair: imageName });
+                        cardsArray.push({ type: 'word', text: word.trim(), pair: imageName });
+                    });
+
                     totalPairs = words.length;
                     callback(cardsArray);
-                })
-                .catch(error => {
-                    console.error("Erro ao carregar os dados dos cartões:", error);
                 });
         }
 
-        function initGame(cardsArray) {
-            gameContainer.innerHTML = ''; // Limpar o container antes de adicionar novos cartões
-            cardsArray.sort(() => 0.5 - Math.random()).forEach(cardData => {
-                const cardElement = createCard(cardData);
-                gameContainer.appendChild(cardElement);
-            });
-            moves = 0;
-            matchedPairs = 0;
-            document.getElementById('move-counter').textContent = 'Moves: 0';
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+            return array;
         }
 
         function createCard(cardData) {
@@ -272,8 +255,6 @@
 
             const cardFront = document.createElement('div');
             cardFront.classList.add('card-front');
-            cardFront.textContent = ""; // Inicialmente vazio
-
             const cardBack = document.createElement('div');
             cardBack.classList.add('card-back');
 
@@ -292,12 +273,12 @@
             cardInner.appendChild(cardBack);
             card.appendChild(cardInner);
             card.addEventListener('click', flipCard);
-
             return card;
         }
 
         function flipCard() {
-            if (this.classList.contains('flipped') || secondCard) return;
+            if (lockBoard) return;
+            if (this.classList.contains('flipped')) return;
 
             this.classList.add('flipped');
 
@@ -307,9 +288,7 @@
             }
 
             secondCard = this;
-            moves++;
-            document.getElementById('move-counter').textContent = `Moves: ${moves}`;
-
+            updateMoveCounter();
             checkForMatch();
         }
 
@@ -317,36 +296,49 @@
             const isMatch = firstCard.dataset.pair === secondCard.dataset.pair;
 
             if (isMatch) {
+                disableCards();
                 matchedPairs++;
-                firstCard = null;
-                secondCard = null;
 
                 if (matchedPairs === totalPairs) {
+                    markPhaseCompleted();
                     showCompletionModal();
-                    ensureUserIsAuthenticated(updateNextPhase);
                 }
             } else {
-                setTimeout(() => {
-                    firstCard.classList.remove('flipped');
-                    secondCard.classList.remove('flipped');
-                    firstCard = null;
-                    secondCard = null;
-                }, 1000);
+                unflipCards();
             }
         }
 
-        function showCompletionModal() {
-            document.getElementById('completion-modal').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
+        function disableCards() {
+            firstCard.removeEventListener('click', flipCard);
+            secondCard.removeEventListener('click', flipCard);
+            resetBoard();
         }
 
-        function closeModal() {
-            document.getElementById('completion-modal').style.display = 'none';
-            document.getElementById('overlay').style.display = 'none';
+        function unflipCards() {
+            lockBoard = true;
+            setTimeout(() => {
+                firstCard.classList.remove('flipped');
+                secondCard.classList.remove('flipped');
+                resetBoard();
+            }, 1500);
+        }
+
+        function resetBoard() {
+            [firstCard, secondCard] = [null, null];
+            lockBoard = false;
+        }
+
+        function updateMoveCounter() {
+            moves++;
+            moveCounterElement.textContent = `Moves: ${moves}`;
+        }
+
+        function markPhaseCompleted() {
+            ensureUserIsAuthenticated(updateNextPhase);
         }
 
         function ensureUserIsAuthenticated(callback) {
-            firebase.auth().onAuthStateChanged(user => {
+            firebase.auth().onAuthStateChanged(function(user) {
                 if (user) {
                     callback(user.uid);
                 } else {
@@ -355,21 +347,21 @@
             });
         }
 
-        async function updateNextPhase(userId) {
+        function updateNextPhase(userId) {
             const currentPhase = getPhaseFromURL();
             const { level, unit } = getLevelAndUnitFromURL();
             const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
-
+            
             try {
                 if (currentPhase === "last") {
                     const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                    await dbRef.child(nextUnit).set({ fase1: true });
+                    dbRef.child(nextUnit).set({ fase1: true });
                 } else if (currentPhase === "end") {
                     const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                    await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+                    firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
                 } else {
                     const nextPhase = parseInt(currentPhase) + 1;
-                    await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+                    dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
                 }
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
@@ -384,11 +376,26 @@
         function getLevelAndUnitFromURL() {
             const url = window.location.pathname;
             const parts = url.split('/');
-            return { level: parts[2], unit: parts[3] };
+            return { level: parts[1], unit: parts[2] };
         }
 
         function goBack() {
             window.history.back();
+        }
+
+        function showCompletionModal() {
+            overlay.style.display = 'block';
+            completionModal.style.display = 'block';
+        }
+
+        function closeModal() {
+            overlay.style.display = 'none';
+            completionModal.style.display = 'none';
+        }
+
+        function restartGame() {
+            gameContainer.innerHTML = '';
+            loadCardsData(initGame);
         }
 
         loadCardsData(initGame);
