--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -237,6 +237,18 @@
                 });
         }
 
+        function initGame(cardsArray) {
+            gameContainer.innerHTML = ''; // Limpa o contêiner para reinicialização
+            shuffle(cardsArray).forEach(cardData => {
+                const cardElement = createCard(cardData);
+                gameContainer.appendChild(cardElement);
+            });
+            adjustFontSize();
+            moves = 0;
+            matchedPairs = 0;
+            moveCounterElement.textContent = 'Moves: 0';
+        }
+
         function shuffle(array) {
             for (let i = array.length - 1; i > 0; i--) {
                 const j = Math.floor(Math.random() * (i + 1));
@@ -399,6 +411,7 @@
         }
 
         loadCardsData(initGame);
+        window.addEventListener('resize', adjustFontSize);
     </script>
 </body>
 </html>
