--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Memory Game</title>
     <style>
-        /* Estilos originais do jogo */
         body {
             font-family: "Times New Roman", Times, serif;
             display: flex;
@@ -93,6 +92,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            text-transform: uppercase;
             text-align: center;
             box-sizing: border-box;
             padding: 10px;
@@ -104,9 +104,33 @@
             color: white;
         }
 
+        .card-front img {
+            max-width: 80%;
+            max-height: 80%;
+            object-fit: contain;
+        }
+
         .card-back {
             background-color: #2ecc71;
             transform: rotateY(180deg);
+        }
+
+        .card img {
+            max-width: 80%;
+            max-height: 80%;
+            object-fit: contain;
+        }
+
+        .card .word {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            word-wrap: break-word;
+            white-space: normal;
+            text-align: center;
+            font-size: calc(10px + 2.5vmin);
         }
 
         #restart-button {
@@ -126,7 +150,6 @@
             background-color: #218838;
         }
 
-        /* Modal de conclusão */
         #overlay {
             display: none;
             position: fixed;
@@ -179,10 +202,12 @@
     <button id="back-button" onclick="goBack()">Back</button>
     <h1>Hannah Memory Game</h1>
     <div id="move-counter">Moves: 0</div>
-    <div id="memory-game"></div>
+    <div id="memory-game">
+        <!-- Cartões serão gerados dinamicamente aqui -->
+    </div>
     <button id="restart-button" onclick="restartGame()">Restart Game</button>
 
-    <!-- Modal de conclusão -->
+    <!-- Modal de conclusão --> 
     <div id="overlay"></div>
     <div id="completion-modal">
         <h2>Phase Completed!</h2>
@@ -196,7 +221,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
     <script>
-        // Configuração do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -228,8 +252,16 @@
 
                     words.forEach((word, index) => {
                         const imageName = `image${index + 1}`;
-                        cardsArray.push({ type: 'image', src: `../data2/imagens/imagem${index + 1}.jpeg`, pair: imageName });
-                        cardsArray.push({ type: 'word', text: word.trim(), pair: imageName });
+                        cardsArray.push({
+                            type: 'image',
+                            src: `../data2/imagens/imagem${index + 1}.jpeg`,
+                            pair: imageName
+                        });
+                        cardsArray.push({
+                            type: 'word',
+                            text: word.trim(),
+                            pair: imageName
+                        });
                     });
 
                     totalPairs = words.length;
@@ -238,7 +270,7 @@
         }
 
         function initGame(cardsArray) {
-            gameContainer.innerHTML = ''; // Limpa o contêiner para reinicialização
+            gameContainer.innerHTML = '';
             shuffle(cardsArray).forEach(cardData => {
                 const cardElement = createCard(cardData);
                 gameContainer.appendChild(cardElement);
@@ -270,6 +302,10 @@
             const cardBack = document.createElement('div');
             cardBack.classList.add('card-back');
 
+            const logo = document.createElement('img');
+            logo.src = 'logo.png';
+            cardFront.appendChild(logo);
+
             if (cardData.type === 'image') {
                 const img = document.createElement('img');
                 img.src = cardData.src;
@@ -284,6 +320,7 @@
             cardInner.appendChild(cardFront);
             cardInner.appendChild(cardBack);
             card.appendChild(cardInner);
+
             card.addEventListener('click', flipCard);
             return card;
         }
@@ -343,6 +380,17 @@
         function updateMoveCounter() {
             moves++;
             moveCounterElement.textContent = `Moves: ${moves}`;
+        }
+
+        function adjustFontSize() {
+            const cards = document.querySelectorAll('.card .word');
+            cards.forEach(card => {
+                let fontSize = parseInt(window.getComputedStyle(card).fontSize);
+                while (card.scrollWidth > card.clientWidth || card.scrollHeight > card.clientHeight) {
+                    fontSize -= 1;
+                    card.style.fontSize = `${fontSize}px`;
+                }
+            });
         }
 
         function markPhaseCompleted() {
