--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -226,7 +226,7 @@
             authDomain: "hannahenglishcourse.firebaseapp.com",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
             projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com",  // Mantenha o valor original aqui
+            storageBucket: "hannahenglishcourse.appspot.com", // Mantenha o valor original aqui
             messagingSenderId: "449818788486",
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707"
         };
@@ -415,9 +415,11 @@
             try {
                 if (currentPhase === "last") {
                     const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                    // Criar a nova unidade no nível atual
                     firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
                 } else if (currentPhase === "end") {
                     const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                    // Criar um novo nível e adicionar Unit1
                     firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
                 } else {
                     const nextPhase = parseInt(currentPhase) + 1;
