--- a/Level1/Unit1/Mixed Letters FIXO/index.html
+++ b/Level1/Unit1/Mixed Letters FIXO/index.html
@@ -7,12 +7,14 @@
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
-            background-color: #ffebcd;
             margin: 0;
             padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: auto;
         }
 
         h1 {
@@ -122,13 +124,13 @@
 
     async function loadActivities() {
         try {
-            const response = await fetch('../data1/words.txt'); // Subindo um nível e acessando a pasta data1
+            const response = await fetch('../data1/words.txt'); 
             const text = await response.text();
             const words = text.trim().split('\n');
 
             words.forEach((word, index) => {
-                const imageName = `imagem${index + 1}.jpeg`; // Gera os nomes das imagens sequencialmente
-                const imageUrl = `../data1/imagens/${imageName}`; // Subindo um nível para acessar as imagens
+                const imageName = `imagem${index + 1}.jpeg`; 
+                const imageUrl = `../data1/imagens/${imageName}`; 
                 
                 createActivity(imageUrl, word);
             });
