--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -7,9 +7,12 @@
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
-            background-color: #ffebcd;
             margin: 0;
             padding: 20px;
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: contain;
+            background-position: center;
         }
         h1 {
             text-align: center;
